# System-Programming-MEPhI

./: .gitignore  CMakeLists.txt  lab3.2.c
lab1/: lab1.c
lab10/: ContextMenuHandler.cpp  ContextMenuHandler.h  ContextMenuHandler.idl
lab2/: lab2.c
lab3/: lab3.1.c  lab3.2.c
lab4/: lab4.c
lab5/: lab5.c
lab6/: pipe_client.c  pipe_server.c  socket_client.c  socket_server.c
lab7/: ServiceManager.c  ServiceManager.h  ServiceUSB.c
lab8/: Hello-world_driver.c  deleteDriver.c  try_delete.c
lab9/: CNG_Signing.c  Enc_Dec_File.c  Singing_File.c
